kubernetes/apps/downloads/qui/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qui
  annotations:
    gatus.home-operations.com/endpoint: |-
      path: /
spec:
  hostnames:
    - qui.negative7.com
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: qui
      matches:
        - path:
            type: PathPrefix
            value: /
